--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,12 @@
+apply plugin: 'java'
+apply plugin: 'idea'
+
 task wrapper(type: Wrapper) {
     gradleVersion = '1.12'
+}
+
+idea {
+    module {
+        sourceDirs += file('src/main/resources')
+    }
 }
