First implementation of AuditProvider completed

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ dependencies {
     testCompile(
             'junit:junit:4.11',
             'org.hamcrest:hamcrest-core:1.3',
-            'org.mockito:mockito-all:1.9.5'
+            'org.mockito:mockito-all:1.9.5',
+            'org.unitils:unitils-core:3.4.2'
     )
 }
 
